force-app/main/default/objects/Product2/fields/Alternate_Key_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Key_Suffix__c</fullName>
    <label>Alternate Key Suffix</label>
    <length>16</length>
    <type>Text</type>
</CustomField>