force-app/main/default/objects/Product2/fields/AMEA_ICOS__c.field-meta.xml
<CustomField>
    <fullName>AMEA_ICOS__c</fullName>
    <label>AMER ICOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>