force-app/main/default/objects/Product2/fields/Commissioning_Product__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissioning Product?</label>
    <type>Checkbox</type>
</CustomField>