force-app/main/default/objects/Product2/fields/EMEA_ICOS__c.field-meta.xml
<CustomField>
    <fullName>EMEA_ICOS__c</fullName>
    <label>EMEA ICOS</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>