force-app/main/default/objects/Product2/fields/Light_Color__c.field-meta.xml
<CustomField>
    <fullName>Light_Color__c</fullName>
    <label>Light Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>