force-app/main/default/objects/Product2/fields/Light_Output__c.field-meta.xml
<CustomField>
    <fullName>Light_Output__c</fullName>
    <label>Light Output</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>