force-app/main/default/objects/Product2/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <label>Product Details</label>
    <length>40</length>
    <type>Text</type>
</CustomField>