force-app/main/default/objects/Product2/fields/Rated_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Rated_Voltage__c</fullName>
    <label>Rated Voltage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>