force-app/main/default/objects/Product2/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <length>8</length>
    <type>Text</type>
</CustomField>