force-app/main/default/objects/Product2/fields/X12NC__c.field-meta.xml
<CustomField>
    <fullName>X12NC__c</fullName>
    <label>12NC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>